Observe onAuthStateChange and log out functionality added done

--- a/src/pages/shared/NavigationBar/NavigationBar.css
+++ b/src/pages/shared/NavigationBar/NavigationBar.css
@@ -19,7 +19,7 @@
   color: #ced4da;
 }
 
-.login-btn {
+.log-btn {
   background-color: rgb(61, 57, 57);
   border: none;
   padding: 10px 30px 10px 30px;
@@ -28,7 +28,7 @@
   transition: 0.3s;
 }
 
-.login-btn:hover {
+.log-btn:hover {
   background-color: black;
   border: none;
   padding: 10px 30px 10px 30px;
